--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Générateur d'étiquettes - Terrasses de l'Avenue</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <style>
+        canvas {
+            width: 9.6cm;
+            height: 2.3cm;
+        }
+    </style>
   </head>
   <body class="container">
-    <h1 class="text-primary text-center">Générateur d'étiquettes - Terrasses de l'Avenue</h1>
-    <form>
+    <h1 class="text-primary text-center d-print-none">Générateur d'étiquettes - Terrasses de l'Avenue</h1>
+    <form class="d-print-none">
         <div class="mb-3">
           <label for="texteEtiquette" class="form-label">Texte de l'étiquette</label>
           <textarea class="form-control" id="texteEtiquette" name="texteEtiquette" placeholder="M. MOULIA Bastien\nB62 - 6ème étage" required="required"></textarea>
@@ -18,11 +24,11 @@
           <label class="form-check-label" for="logoStopPub">Logo StopPub</label>
         </div>
     </form>
-    <canvas id="canvas" class="border border-2" width="930" height="230"></canvas>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
-
+    <div>
+        <canvas id="canvas" class="border border-2" width="930" height="230"></canvas>
+    </div>
+    <button class="btn btn-primary d-print-none" id="print">Imprimer</button>
     <script>
-
         var textAreas = document.getElementsByTagName('textarea');
         Array.prototype.forEach.call(textAreas, function(elem) {
             elem.placeholder = elem.placeholder.replace(/\\n/g, '\n');
@@ -95,6 +101,9 @@
         document.querySelector('#logoStopPub').addEventListener('change', (change) => {
             logoStopPub = change.target.checked;
             generateCanvas();
+        });
+        document.querySelector('#print').addEventListener('click', () => {
+            window.print();  
         });
         generateCanvas();
     </script>
